not found spacing moved and create options button hover effect fixed

--- a/client/src/css/Create.css
+++ b/client/src/css/Create.css
@@ -48,7 +48,18 @@
     margin-top: 15%;
 }
 
-.createButton1{
+.createButton:hover {
+    box-shadow: 0 0 10px 0 blueviolet inset, 0 0 10px 4px blueviolet;
+    outline: 0;
+    text-decoration: none;
+}
+
+.createButtonText{
+margin: 4 (25%);
+font-size: 35px;
+}
+
+.createOptions{
     width: 400px;
     height: 50px;
     display: flex;
@@ -70,6 +81,17 @@
     margin-top: 1%;
 }
 
+.createOptions:hover {
+    box-shadow: 0 0 10px 0 blueviolet inset, 0 0 10px 4px blueviolet;
+    outline: 0;
+    text-decoration: none;
+}
+
+.createOptionsText{
+margin: 4 (25%);
+font-size: 35px;
+}
+
 #instructions{
     font-size: x-large;
     margin: 3%;
@@ -78,18 +100,6 @@
 #optionLabel{
     width:20vw;
     padding:1%;
-}
-
-
-.createButton:hover {
-    box-shadow: 0 0 10px 0 blueviolet inset, 0 0 10px 4px blueviolet;
-    outline: 0;
-    text-decoration: none;
-}
-
-.createButtonText{
-margin: 4 (25%);
-font-size: 35px;
 }
 
 .questionBox{
