--- a/client/src/css/StartContainer.css
+++ b/client/src/css/StartContainer.css
@@ -1,7 +1,7 @@
 .startContainer{
     display: flex;
     flex-direction: column;
-    justify-content: center;;
+    justify-content: center;
     align-items: center;
     color: white;
     margin: 0;
